maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:17: error: not found: type Booleen
def murAGch() : Booleen={
                ^