maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit())
  	longeGch()
  prendBiscuit()
}

def longeGch(){
  while (murAGch()){
    if (!estFaceMur())
    	avance()
    else 
    	droite()
  gauche()
  }
}

def murAGch() : Booleen={
  gauche()
  if (estFaceMur()){
  	droite()
  	return true 
  }
  droite()
  return false  
}